<resources>
    <string name="app_name">TabataTimer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Preference Strings-->
    <string name="settings_fragment_title">Settings</string>
    <string name="delete_all" translatable="false">delete_all</string>
    <string name="delete_confirmation">Do you want to delete all data?</string>
    <string name="confirmation">Confirmation</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="preferences_dark_theme_title">Dark theme</string>
    <string name="preferences_language_title">Language</string>
    <string name="preferences_font_scale_title">Font scale</string>
    <string name="preferences_clear_all_title">Clear all data</string>
    <string name="preferences_delete_all_summary">Clear all data stored on the device</string>
    <string name="added_successfully">Added successfully!</string>
    <string name="updated_successfully">Updated successfully!</string>
    <string name="language" translatable="false">language</string>
    <string name="font_scale" translatable="false">font_size</string>
    <string name="dark_theme" translatable="false">dark_theme</string>

    <string name="play_button">button to start workout</string>
    <string-array name="languageList">
        <item>"English"</item>
        <item>"Русский"</item>
    </string-array>

    <string-array name="languageListData">
        <item>en</item>
        <item>ru</item>
    </string-array>

    <string-array name="fontScaleList">
        <item>"0.5"</item>
        <item>"0.75"</item>
        <item>"1"</item>
        <item>"1.25"</item>
        <item>"1.5"</item>
    </string-array>

    <string-array name="fontScaleListData">
        <item>"0.5"</item>
        <item>"0.75"</item>
        <item>"1"</item>
        <item>"1.25"</item>
        <item>"1.5"</item>
    </string-array>

    <!-- Workout fragment-->
    <string-array name="manipulate_workout">
        <item>Edit</item>
        <item>Preview</item>
        <item>Delete</item>

    </string-array>

    <string name="workout_title">Workouts: </string>

    <string name="title_activity_timer">TimerActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label" translatable="false">First Fragment</string>
    <string name="second_fragment_label" translatable="false">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment" translatable="false">Hello first fragment</string>
    <string name="hello_second_fragment" translatable="false">Hello second fragment. Arg: %1$s</string>
    <string name="default_timer_text" translatable="false">00:00</string>
    <string name="number_reps">0 of reps</string>
    <string name="end_workout">End Workout</string>
    <string name="place_holder_title">Workout Name</string>

    <!-- Content description-->
    <string name="add_new_interval">button to add new interval, opening dialog</string>
    <string name="decrement_time">button to decrement interval time</string>
    <string name="increment_time">button to increment interval time</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="preview">Preview</string>
    <string name="start_workout">Start Workout</string>
    <string name="defalut_timer_text" translatable="false">00:00</string>
    <string name="sequence_title">Sequence:</string>
    <string name="interval_name_title">Intreval Name</string>
    <string name="notification_channel" translatable="false">default.channel</string>

    <string name="notification_rewind_action" translatable="false">REWIND</string>
    <string name="notification_pause_action" translatable="false">PAUSE</string>
    <string name="notification_fast_forward_action" translatable="false">FAST FORWARD</string>

</resources>